fix www. issue, fix link modal button spacing, fix logged out user seeing bookmark button

--- a/assets-src/components/LinkModal.scss
+++ b/assets-src/components/LinkModal.scss
@@ -47,7 +47,7 @@
     .btn {
         cursor: pointer;
         width: 100px;
-        margin: 0 0.5em;
+        margin: 0;
         border: none;
         background: none;
     }
